added wip header component, added shared styles, added bootstrap grid

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CreativeDevelopments</title>
+  <title>Creative Developments | Home | Web Design And Development</title>
+  <meta name="keywords" content="web design, web development, XTHML, CSS3" />
+  <meta name="description" content="Freelance web design and back end web development. Services include website design, PSD to XHTML conversion, content management systems, XHTML emails." />
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
