Made footer sticky, added footer bg img

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
   <meta charset="utf-8">
   <title>Creative Developments | Home | Web Design And Development</title>
   <meta name="keywords" content="web design, web development, XTHML, CSS3" />
-  <meta name="description" content="Freelance web design and back end web development. Services include website design, PSD to XHTML conversion, content management systems, XHTML emails." />
+  <meta name="description" content="Freelance web design and back end web development. Services include website design,
+  PSD to XHTML conversion, content management systems, XHTML emails." />
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <app-root></app-root>
+<body class="h-100">
+  <app-root class="d-flex flex-column min-height-100vh"></app-root>
 </body>
 </html>
